version/2.1/_sources/examples/gallery_examples/01-project-configuration/add_cca.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\gallery_examples\01-project-configuration\add_cca.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_gallery_examples_01-project-configuration_add_cca.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_01-project-configuration_add_cca.py:


.. _ref_add_cca_and_import_odb:

=========================
Add Circuit Card Assembly
=========================

This example demonstrates how to connect to the Sherlock gRPC service, import a project,
and add a CCA (Circuit Card Assembly) to a project.

Description
-----------
Sherlock's gRPC API allows users to automate workflows such as adding CCAs to a project
and importing ODB++ archives.
This script demonstrates how to:
- Connect to the Sherlock service.
- Import a project.
- Add CCAs to the project.

The added CCAs allow for proper circuit analysis and component tracking within the project.

.. GENERATED FROM PYTHON SOURCE LINES 46-55

.. code-block:: Python



    import os

    from examples.examples_globals import get_sherlock_tutorial_path

    from ansys.sherlock.core import launcher
    from ansys.sherlock.core.errors import SherlockAddCCAError, SherlockImportProjectZipArchiveError








.. GENERATED FROM PYTHON SOURCE LINES 57-60

Connect to Sherlock
===================
Connect to the Sherlock service and ensure proper initialization.

.. GENERATED FROM PYTHON SOURCE LINES 60-63

.. code-block:: Python


    sherlock = launcher.connect(port=9092, timeout=10)



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\examples\01-project-configuration\add_cca.py", line 61, in <module>
        sherlock = launcher.connect(port=9092, timeout=10)
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 324, in connect
        raise e
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 298, in connect
        channel = _connect_grpc_channel(
            host=LOCALHOST,
        ...<4 lines>...
            certs_dir=certs_dir,
        )
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\launcher.py", line 369, in _connect_grpc_channel
        channel = create_channel(
            transport_mode=transport_mode,
        ...<9 lines>...
            ],
        )
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\utils\cyberchannel.py", line 149, in create_channel
        return create_mtls_channel(host, port, certs_dir, cert_files, grpc_options)
      File "C:\Users\ansys\actions-runner\_work\pysherlock\pysherlock\.venv\Lib\site-packages\ansys\sherlock\core\utils\cyberchannel.py", line 364, in create_mtls_channel
        raise FileNotFoundError(error_message) from e
    FileNotFoundError: Certificate file not found: certs\ca.crt. Ensure that the certificates are present in the 'certs' folder or set the 'ANSYS_GRPC_CERTIFICATES' environment variable.




.. GENERATED FROM PYTHON SOURCE LINES 64-67

Delete Project
==============
Delete the project if it already exists.

.. GENERATED FROM PYTHON SOURCE LINES 67-74

.. code-block:: Python


    try:
        sherlock.project.delete_project("Test")
        print("Project deleted successfully.")
    except Exception:
        pass


.. GENERATED FROM PYTHON SOURCE LINES 75-78

Import Tutorial Project
=======================
Import the tutorial project zip archive from the Sherlock tutorial directory.

.. GENERATED FROM PYTHON SOURCE LINES 78-89

.. code-block:: Python


    try:
        sherlock.project.import_project_zip_archive(
            project="Test",
            category="Demos",
            archive_file=os.path.join(get_sherlock_tutorial_path(), "Auto Relay Project.zip"),
        )
        print("Tutorial project imported successfully.")
    except SherlockImportProjectZipArchiveError as e:
        print(f"Error importing project: {str(e)}")


.. GENERATED FROM PYTHON SOURCE LINES 90-93

Add CCA to Project
===================
Add a CCA to a project.

.. GENERATED FROM PYTHON SOURCE LINES 93-113

.. code-block:: Python


    try:
        sherlock.project.add_cca(
            project="Test",
            cca_properties=[
                {
                    "cca_name": "Card 2",
                    "description": "Second CCA",
                    "default_solder_type": "SAC305",
                    "default_stencil_thickness": 10,
                    "default_stencil_thickness_units": "mm",
                    "default_part_temp_rise": 20,
                    "default_part_temp_rise_units": "C",
                    "guess_part_properties_enabled": False,
                }
            ],
        )
        print("Card 2 added successfully.")
    except SherlockAddCCAError as e:
        print(f"Error adding CCA: {str(e)}")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.008 seconds)


.. _sphx_glr_download_examples_gallery_examples_01-project-configuration_add_cca.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_cca.ipynb <add_cca.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_cca.py <add_cca.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: add_cca.zip <add_cca.zip>`
